<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/logodikti"
        android:layout_marginTop="250dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/biru"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teks1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/hitam"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teks2"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/hitam"
        />

</LinearLayout>