<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_pengajaran"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_no_pengajaran"
            android:text="1"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/holo_blue_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/matkul"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_matkul"
            android:maxWidth="150dp"
            android:maxLines="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/kelas" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_kelas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jumlahmhs"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_jumlahmhs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sks"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_sks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
</LinearLayout>