<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_penelitian"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:clickable="true"
    android:padding="10dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_no_penelitian"
            android:text="1"
            android:textSize="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/holo_blue_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/judul_penelitian"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_judul"
            android:maxWidth="150dp"
            android:maxLines="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Skim"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_skim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tahun_pelaksanaan"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_thnpelaksanaan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lama_kegiatan"
            android:layout_weight="5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=":"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_lamakegiatan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nodata"
            android:layout_weight="5" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/bgAbu"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/btn_delete_penelitian"
            android:clickable="true"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:focusable="true">
            <LinearLayout
                android:background="@drawable/bgmerah"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_white_24dp"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hapus"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_edit_penelitian"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginStart="10dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:focusable="true">
            <LinearLayout
                android:background="@drawable/bgbiru"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_white_24dp"/>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ubah"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>